<!--
  ~ GNU General Public License v3.0
  ~
  ~ Copyright (c) 2020-2021 Toh Jeen Gie Keith
  ~
  ~
  ~ This file is part of WaterTracker.
  ~
  ~ WaterTracker is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ WaterTracker is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with WaterTracker.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">WaterTracker</string>

    <string name="congratulations">Congratulations! You have drank all 5 glasses for today!</string>
    <string name="reset">Reset</string>
    <string name="notify_after">Notify after </string>
    <string name="how_many">how many?</string>
    <string name="mins_not_drinking">minutes of not drinking.</string>
    <string name="ok">OK</string>
    <string name="currently_running">Water alarm is currently running</string>
    <string name="not_running">Water alarm is currently not running</string>
    <string name="drink_water">Drink water!!!</string>
    <string name="no_empty_minutes">Notify after minutes cannot be empty</string>
</resources>